2006-03-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMemoryPanel.m: Extend to allow snapshots of the memory
	to be taken so we can compare memory at different points in time.

2006-03-26  Maurizio Boriani  <baux@gnu.org>

	* Resources/Italian.lproj/Localizable.string: Add missing translations.
	* Resources/Lojban.lproj/Localizable.string: New, lojban strings
	translation.

2006-03-28 20:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* Tools/gopen.m: Added back code in to launch the application properly
	with the -a option.

2006-03-26 12:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSPopUpButtonCell.h: Refactored header, 
	added documentation
	* Source/NSNib.m: Added documentation.
	* Source/NSPopUpButtonCell.m: Improved documentation.

2006-03-26  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSSearchFieldCell.h:
	* Headers/AppKit/NSSearchField.h:
	* Source/NSSearchField.m:
	* Source/NSSearchFieldCell.m: Added headers and basic
	implementation for these classes based on code by 
	Nikolaus Schaller <hns@computer.org>.
	* Source/GNUmakefile: Handle these new classes.

2006-03-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSStepperCell.m: Rewrote all button drawing functions to
	use new helper function DrawLightButton to honour colour settings.
	Based on patch idea by Ingolf Jandt <i.jandt@web.de>.
	* Source/NSStepperCell.m (-highlight:upButton:withFrame:inView:):
	Simplified to use [drawWithFrame:inView:].
	* Source/NSColorPanel.m (-_initWithoutGModel): Enable colour wells
	in bottom list.

2006-03-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMenuView.m: ([-rectOfItemAtIndex:]) remove unused code and
	tidy a bit (problem pointed out by Matt Rice).

2006-03-19  Nicolas Roard <nicolas@roard.com>

	* Source/NSSliderCell.m:
	* Source/NSTabView.m:
	* Images/common_SliderHoriz.tiff:
	* Images/common_SliderVert.tiff:
	* Images/common_SwitchOff.tiff:
	* Images/common_SwitchOn.tiff: